# skypro.tony.oop

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml
execute_modules/: test.read_json_class.py
src/: classes.py  read_json_class.py
tests/: conftest.py  test_classes.py
